fix: adjust header padding to prevent overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,6 +119,7 @@ header {
   /* gap: 20px; */
   /* padding: 12px; */
   background: url(images/header-bg.webp) center/cover no-repeat;
+  padding-bottom: 40px;
 }
 
 .header-img-container {
